Add PHP and Python support with examples and docs
Added full support for PHP (composer.json) and Python (pyproject.toml, setup.py, __init__.py) version bumping. Updated core logic, documentation, and examples to reflect new language support. Includes auto-detection for Python files, integration tests, and example workflows for all supported languages.

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ description: 'Read version from package file, bump it, and create tag, commit'
 
 inputs:
   lang:
-    description: 'The type of programing language'
+    description: 'The type of programing language (js, rust, php, python)'
     required: false
     default: 'js'
   bumpLvl:
