Add Go (go.mod) parser and writer support
Introduces GoParser and GoWriter for handling go.mod files, enabling version extraction and updates for Go projects. Updates factories, config, and integration tests to support the 'go' language, and adds an example go.mod file. Also adds a 'test:go' npm script for integration testing.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:php": "node test-integration.js --lang=php",
     "test:python": "node test-integration.js --lang=python",
     "test:js": "node test-integration.js --lang=js",
-    "test:rust": "node test-integration.js --lang=rust"
+    "test:rust": "node test-integration.js --lang=rust",
+    "test:go": "node test-integration.js --lang=go"
   },
   "license": "MIT",
   "dependencies": {
