--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "release:tag": "git tag -a v%npm_package_version% -m \"Release v%npm_package_version%\" && git push origin v%npm_package_version%",
     "release:update-major": "git tag -f v1 && git push -f origin v1",
     "release:full": "npm run release:prepare && npm run release:tag && npm run release:update-major",
+    "version:patch": "npm version patch && git push origin master",
+    "version:minor": "npm version minor && git push origin master", 
+    "version:major": "npm version major && git push origin master",
+    "bump:patch": "npm run version:patch && npm run release:full",
+    "bump:minor": "npm run version:minor && npm run release:full",
+    "bump:major": "npm run version:major && npm run release:full",
     "tag:current": "echo Current version: %npm_package_version%",
     "tag:list": "git tag -l -n1",
     "tag:delete": "git tag -d v%npm_package_version% && git push --delete origin v%npm_package_version%"
