--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "test:rust": "node test-integration.js --lang=rust",
     "test:go": "node test-integration.js --lang=go",
     "release:prepare": "npm run build && git add dist/ && git diff --staged --quiet || git commit -m \"build: update dist for release\"",
-    "release:tag": "git tag -a v%npm_package_version% -m \"Release v%npm_package_version%\" && git push origin v%npm_package_version%",
+    "release:tag": "git push origin v%npm_package_version%",
     "release:update-major": "git tag -f v1 && git push -f origin v1",
     "release:full": "npm run release:prepare && npm run release:tag && npm run release:update-major",
-    "version:patch": "npm version patch && git push origin master",
-    "version:minor": "npm version minor && git push origin master",
-    "version:major": "npm version major && git push origin master",
-    "bump:patch": "npm run version:patch && npm run release:full",
-    "bump:minor": "npm run version:minor && npm run release:full",
-    "bump:major": "npm run version:major && npm run release:full",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor", 
+    "version:major": "npm version major",
+    "bump:patch": "npm run version:patch && git push origin master && npm run release:full",
+    "bump:minor": "npm run version:minor && git push origin master && npm run release:full",
+    "bump:major": "npm run version:major && git push origin master && npm run release:full",
     "tag:current": "echo Current version: %npm_package_version%",
     "tag:list": "git tag -l -n1",
     "tag:delete": "git tag -d v%npm_package_version% && git push --delete origin v%npm_package_version%"
