refactor: move release functionality to scripts/ directory
- Create comprehensive scripts/release-helper.js with cross-platform support
- Simplify package.json scripts to use helper
- Add scripts/README.md for documentation
- Update RELEASE.md with new simplified workflow
- Support for Windows, macOS, and Linux

--- a/package.json
+++ b/package.json
@@ -14,19 +14,11 @@
     "test:js": "node test-integration.js --lang=js",
     "test:rust": "node test-integration.js --lang=rust",
     "test:go": "node test-integration.js --lang=go",
-    "release:prepare": "npm run build && git add dist/ && git diff --staged --quiet || git commit -m \"build: update dist for release\"",
-    "release:tag": "git push origin v%npm_package_version%",
-    "release:update-major": "git tag -f v1 && git push -f origin v1",
-    "release:full": "npm run release:prepare && npm run release:tag && npm run release:update-major",
-    "version:patch": "npm version patch",
-    "version:minor": "npm version minor", 
-    "version:major": "npm version major",
-    "bump:patch": "npm run version:patch && git push origin master && npm run release:full",
-    "bump:minor": "npm run version:minor && git push origin master && npm run release:full",
-    "bump:major": "npm run version:major && git push origin master && npm run release:full",
-    "tag:current": "echo Current version: %npm_package_version%",
-    "tag:list": "git tag -l -n1",
-    "tag:delete": "git tag -d v%npm_package_version% && git push --delete origin v%npm_package_version%"
+    "version": "node scripts/release-helper.js version current",
+    "release": "node scripts/release-helper.js release full",
+    "bump:patch": "node scripts/release-helper.js bump patch",
+    "bump:minor": "node scripts/release-helper.js bump minor",
+    "bump:major": "node scripts/release-helper.js bump major"
   },
   "license": "MIT",
   "dependencies": {
