feat: simplify release automation using GitHub CLI
- Remove curl/manual browser methods
- Use 'gh release create' for GitHub releases
- Use 'gh repo view --web' to open repository
- Update README with GitHub CLI requirements
- Add GitHub CLI authentication instructions
- Cleaner error handling and messaging

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "test:go": "node test-integration.js --lang=go",
     "version": "node scripts/release-helper.js version current",
     "release": "node scripts/release-helper.js release full",
+    "release:github": "node scripts/release-helper.js release github",
+    "release:open": "node scripts/release-helper.js release open",
     "bump:patch": "node scripts/release-helper.js bump patch",
     "bump:minor": "node scripts/release-helper.js bump minor",
     "bump:major": "node scripts/release-helper.js bump major"
